--- a/WTX&/241120.md
+++ b/WTX&/241120.md
@@ -1,2 +1,3 @@
 # 1120 換月
 ![image](https://github.com/user-attachments/assets/499c7190-313c-4c56-9641-ad308a591a81)
+![image](https://github.com/user-attachments/assets/6494f0d2-952c-4d8e-9db0-1f8a26587029)
